[INFER] Use correct PC when calling lambda stubs, bug 674364.